--- a/index.html
+++ b/index.html
@@ -14291,7 +14291,7 @@ a.anchor-link {
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h1 id="Party-Affiliation-Data">Party Affiliation Data<a class="anchor-link" href="#Party-Affiliation-Data">&#182;</a></h1><h2 id="Date-from-Gallup-Surveys">Date from Gallup Surveys<a class="anchor-link" href="#Date-from-Gallup-Surveys">&#182;</a></h2>
+<h1 id="Party-Affiliation-Data">Party Affiliation Data<a class="anchor-link" href="#Party-Affiliation-Data">&#182;</a></h1><h2 id="Data-from-Gallup-Surveys">Data from Gallup Surveys<a class="anchor-link" href="#Data-from-Gallup-Surveys">&#182;</a></h2>
 </div>
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
 <div class="jp-Cell-inputWrapper">
