--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<head>
+  <title>
+    Party Analysis
+  </title>
+</head>
 <body>
   <script>
     window.location.href = '/PartyAnalysis.html'; //relative to domain
