redirect url fixed

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <script>
-    window.location.href = '/PartyAnalysis.html'; //relative to domain
+    window.location.href = '/partyaffiliation/PartyAnalysis.html'; //relative to domain
   </script>
 </body>
 </html>
