--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
   </title>
 </head>
 <body>
-  <script>
-    window.location.href = '/partyaffiliation/PartyAnalysis.html'; //relative to domain
-  </script>
+  <a href="PartyAnalysis.html">View</a>
 </body>
 </html>
