--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
   <a href="PartyAnalysis.html">View</a>
+  <script> window.location.href="PartyAnalysis.html"</script>
 </body>
 </html>
